Remove usages of Commons Lang (#692)